samples/_failures_safe/1761544110_ae21dd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a2e62e39.c: In function ‘compress_data’:
./samples/SAFE/__tmp_a2e62e39.c:151:36: error: expected ‘)’ at end of input
  151 |         if (remaining >= block_size
      |            ~                       ^
      |                                    )
./samples/SAFE/__tmp_a2e62e39.c:151:9: error: expected declaration or statement at end of input
  151 |         if (remaining >= block_size
      |         ^~
./samples/SAFE/__tmp_a2e62e39.c:151:9: error: expected declaration or statement at end of input
